[gd_scene format=3 uid="uid://b5bae5mexybo5"]

[ext_resource type="Script" uid="uid://345t8rc4sm0w" path="res://scripts/control.gd" id="1_sugp2"]
[ext_resource type="Texture2D" uid="uid://dpsy1rf0bk4ql" path="res://scenes/brown.png" id="2_0wfyh"]
[ext_resource type="Texture2D" uid="uid://drmeddeocan7p" path="res://assets/customer1.png" id="3_sugp2"]
[ext_resource type="Texture2D" uid="uid://bx6v44ajkxky1" path="res://assets/customer1pressed.png" id="4_tbgi4"]
[ext_resource type="Texture2D" uid="uid://dutbr81cnvxqr" path="res://assets/customer1hover.png" id="5_tefeu"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_0wfyh"]
texture = ExtResource("2_0wfyh")

[node name="Base" type="Node2D" unique_id=185890852]

[node name="Camera2D" type="Camera2D" parent="." unique_id=1056906620]
position = Vector2(573, 320)

[node name="Control" type="Control" parent="." unique_id=1211015157]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_sugp2")

[node name="TextPanel" type="Panel" parent="Control" unique_id=604786015]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 318.0
offset_top = 190.0
offset_right = 784.0
offset_bottom = 190.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_0wfyh")

[node name="TextBox" type="RichTextLabel" parent="Control/TextPanel" unique_id=960040446]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 37.0
offset_top = 9.0
offset_right = -42.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 2
bbcode_enabled = true
scroll_active = false
autowrap_mode = 2
tab_size = 5

[node name="Recommend" type="Button" parent="Control" unique_id=1014069383]
layout_mode = 0
offset_left = 504.0
offset_top = 468.0
offset_right = 625.0
offset_bottom = 518.0
text = "Recommend"

[node name="Customer" type="Node2D" parent="." unique_id=1697737353]
position = Vector2(572, 321)

[node name="TextureButton" type="TextureButton" parent="Customer" unique_id=922831342]
texture_filter = 1
offset_left = -99.0
offset_top = -53.0
offset_right = 87.0
offset_bottom = 133.0
texture_normal = ExtResource("3_sugp2")
texture_pressed = ExtResource("4_tbgi4")
texture_hover = ExtResource("5_tefeu")
stretch_mode = 0

[connection signal="pressed" from="Control/Recommend" to="Control" method="_on_recommend_pressed"]
[connection signal="pressed" from="Customer/TextureButton" to="Control" method="_on_texture_button_pressed"]
